<resources>
    <string name="app_name">火星教育</string>
    <string name="navigation_drawer_open">打开侧滑菜单</string>
    <string name="navigation_drawer_close">关闭侧滑菜单</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="menu_user_info">用户信息</string>
    <string name="menu_wallet">钱包</string>
    <string name="menu_album">相册</string>
    <string name="menu_tools">工具</string>
    <string name="menu_share">分享</string>
    <string name="menu_contact">联系</string>
</resources>
