<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_info"
            android:icon="@mipmap/slide_menu_account"
            android:title="@string/menu_user_info" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@mipmap/slide_menu_wallet"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_album"
            android:icon="@mipmap/slide_menu_album"
            android:title="@string/menu_album" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@mipmap/slide_menu_tools"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="社交">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/slide_menu_shared"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@mipmap/slide_menu_mail"
                android:title="@string/menu_contact" />
        </menu>
    </item>

</menu>
